--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 *{
     margin: 0;
     padding: 0;
+    letter-spacing:0.1em;
 }
-
+#largeur-max{
+    max-width: 2000px;
+    width: 100%;
+} 
 header{
     height: 100vh;
     width: 100%;
@@ -28,17 +32,6 @@ header > nav{
     width: 100%;
     background-color: #9B5855;
 }
-
-@media (max-width: 767px) {
-    header > div > video {
-        display: none;
-    }
-    body {
-        background: url('poster.jpg');
-        background-size: cover;
-    }
-}
-
 #logo{
     position: absolute;
     top: 20px;
@@ -57,6 +50,17 @@ header > nav > ul > li{
     
 }
 
+#burger > img{
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    left: 40px;
+    top: 15px;
+    display: none;
+    
+   
+}
+
 #prestations{
     display: block;
     line-height: 90px;
@@ -64,13 +68,13 @@ header > nav > ul > li{
     list-style: none;
     text-transform: uppercase;
     color: #FCFF38;
-    font-size: 2em;
-    padding: 0 50px;
+    font-size: 1.5em;
+    width: 320px;
     transition: 1s;
     font-weight: bold;
+    text-align: center;
 
 }
-
 header > nav > ul > li > a{
     display: block;
     line-height: 90px;
@@ -78,11 +82,12 @@ header > nav > ul > li > a{
     list-style: none;
     text-transform: uppercase;
     color: #FCFF38;
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 0 20px;
     transition: 1s;
     font-weight: bold;
 }
+
 
 
 header > nav > ul > li:hover >a, #prestations:hover{
@@ -97,14 +102,13 @@ header > nav > ul > li:hover >a, #prestations:hover{
     position: absolute;
     top: -450px;
     background-color:#A8549A ;
-    margin-left: -50px;
     opacity: .8;
 }
 
 #sousmenu li{
     transition: all 300ms ease-in-out;
     list-style-type: none;
-    padding: 0 20px;
+    width: 320px;
     text-align: center;
     transition: 1s;
 }
@@ -127,3 +131,60 @@ header > nav > ul > li:hover >a, #prestations:hover{
   #sousmenu li:hover{
     background-color: #9B5855;
   }
+  @media (max-width: 1400px){
+    #prestations{
+        font-size: 1.2em;
+    }
+    header > nav > ul > li > a{
+        font-size: 1.2em;
+    }
+}
+@media (max-width: 1200px){
+    header > nav > ul > li > a{
+        padding: 0 5px;
+    }
+    #sousmenu li{
+        width: 250px;
+    }
+    #prestations{
+        width: 250px;
+    }
+}
+
+@media (max-width: 1050px){
+    #prestations{
+        font-size: 1em;
+    }
+    header > nav > ul > li > a{
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 900px) {
+    header > div > video {
+        display: none;
+    }
+    header > div{
+        background: url(./img/vue-profil-jolie-jeune-femme-qui-equilibre-son-energie-lors-seance-reiki-dans-clinique-sante-spa_662251-1994.webp) center center / cover no-repeat ;;
+    }
+    body {
+        background: url('poster.jpg');
+        background-size: cover;
+    }
+    #prestations{
+        font-size: 0.7em;
+    }
+    header > nav > ul > li > a{
+        font-size: 0.7em;
+    }
+    #sousmenu li{
+        width: 200px;
+    }
+    #prestations{
+        width: 200px;
+    }
+}
+@media screen and (max-width: 700px){
+
+}
+
