--- a/style.css
+++ b/style.css
@@ -107,10 +107,24 @@ header > nav > ul > li{
    overflow: hidden;
 }
 
+#croix2
+{
+    color: #FCFF38;
+   text-transform: uppercase;
+   font-weight: bold; 
+   height: 0;
+   width: 30px;
+   position: absolute;
+   font-size: 1.5em;
+   overflow: hidden;
+   
+}
+
 
 
 #prestations{
-    display: block;
+    display: flex;
+    align-items: center;
     line-height: 90px;
     text-decoration: none;
     list-style: none;
@@ -118,10 +132,25 @@ header > nav > ul > li{
     color: #FCFF38;
     font-size: 1.5em;
     width: 320px;
+    padding-left: -40px;
     transition: 1s;
     font-weight: bold;
     text-align: center;
+    justify-content: space-around;
+    transition: 0.3s;
+    
 
+}
+
+#triangle{
+    width: 30px;
+    
+    display: none;
+}
+
+#prestations > figure > img{
+    width: 30px;
+    padding-bottom: 20px;
 }
 header > nav > ul > li > a{
     display: block;
@@ -160,6 +189,7 @@ header > nav > ul > li:hover >a, #prestations:hover{
     width: 320px;
     text-align: center;
     transition: 1s;
+    
 }
 
 #sousmenu a{
@@ -182,7 +212,7 @@ header > nav > ul > li:hover >a, #prestations:hover{
   }
 
   
-  @media (max-width: 1400px){
+  @media (max-width: 1430px){
     #prestations{
         font-size: 1.2em;
     }
@@ -190,19 +220,19 @@ header > nav > ul > li:hover >a, #prestations:hover{
         font-size: 1.2em;
     }
 }
-@media (max-width: 1200px){
+@media (max-width: 1260px){
     header > nav > ul > li > a{
         padding: 0 5px;
     }
     #sousmenu li{
-        width: 250px;
+        width: 300px;
     }
     #prestations{
-        width: 250px;
+        width: 300px;
     }
 }
 
-@media (max-width: 1050px){
+@media (max-width: 1060px){
     #prestations{
         font-size: 1em;
     }
@@ -211,7 +241,7 @@ header > nav > ul > li:hover >a, #prestations:hover{
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 960px) {
     #desktop > video {
         display: none;
     }
@@ -248,10 +278,10 @@ header > nav > ul > li:hover >a, #prestations:hover{
 }
 
 #menu.active{
-    height: 100vh;
-    z-index: 99;
-   justify-content: space-around;
-   align-items: center;
+height: 100vh;
+z-index: 99;
+justify-content: space-around;
+align-items: center;
     
     
 }
@@ -278,19 +308,51 @@ header > nav > ul > li:hover >a, #prestations:hover{
 }
 
 #sousmenu.active{
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100vh;
+    width: 100%;
+    opacity: 1;
     z-index: 200;
-   justify-content: space-around;
-   align-items: center;
+    justify-content: space-around;
+    align-items: center;
+    transform: scale(1);
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    
+   
     
     
 }
 #sousmenu.active > ul{
     flex-direction: column;
     align-items: center;
-    
-    
+    justify-content: center;
+    display: block;  
+}
 
+#sousmenu.active #croix2{
+    top: 10px;
+    right: 10px;
+    height: 30px;
+    cursor: pointer;
+    overflow:visible;
+}
+
+#prestations{
+    padding-left: 40px;
+   
+}
+#prestations:hover{
+    cursor:default;
+}
+
+#triangle{
+    display: block;
+    height: 30px;
+    cursor: pointer;
 }
 
 }
