--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 }
 header > nav{
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     height: 90px;
     width: 100%;
     background-color: #9B5855;
@@ -239,6 +239,10 @@ header > nav > ul > li:hover >a{
     header > nav > ul > li > a{
         font-size: 1.2em;
     }
+
+    header > nav{
+        margin-bottom: -15px;
+    }
 }
 @media (max-width: 1260px){
     header > nav > ul > li > a{
@@ -424,14 +428,15 @@ align-items: center;
     background-color: #B0BF3B;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .presentation{
     margin-top: 50px;
     margin-bottom: 50px;
     width: 450px;
-    height: 940px;
-    background-color: #A8549A;
+    height: 800px;
+    position: relative;
 }
 
 .circle{
@@ -440,4 +445,161 @@ align-items: center;
     width: 450px;
     object-fit: cover;
     border-radius: 50%;
+    align-items: center;
+}
+
+.description{
+    text-align: center;
+    margin-top: 30px;
+    color: #6F372A;
+}
+
+.titre{
+    font-size: 2em;
+}
+
+.text{
+    margin-top: 30px;
+    font-size: 1.5em;
+}
+
+.decouvrir{
+    height: 40px;
+    width: 400px;
+    cursor: pointer;
+    text-align: center;
+    position: absolute;
+    left: 25px;
+    bottom: 10px;
+    background-color: #6F372A;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.8em;
+    border: none;
+}
+.ronde{
+    display: flex;
+}
+
+@media screen and (max-width: 700px){
+
+    .presentation{
+        width: 300px;   
+    }
+    .circle{
+        height: 280px;
+        width: 280px;
+        margin: 0 auto;
+        
+
+    }
+    .decouvrir{
+        width: 250px;
+        left: 25px;
+        bottom: 0px;
+        margin-top: 20px;
+    }
+
+    .titre{
+        font-size: 1.5em;
+    }
+    
+    .text{
+        margin-top: 30px;
+        font-size: 1em;
+    }
+
+    .presentation{
+        height: 550px;
+        margin-top: 20px
+        
+    }
+   ;
+
+
+}
+
+#section2{
+height: auto;
+background-color: #D9B19A;
+
+}
+
+#figures{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
+h2{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2em;
+    color: #1F5002;
+    padding-top: 20px;
+    text-decoration:underline ;
+}
+
+.sevises{
+    height: 450px;
+    width: 450px;
+    padding: 40px 60px;
+    position: relative;
+}
+
+.image{
+    height: 450px;
+    width: 450px;
+    object-fit: cover;
+}
+
+.lien{
+    position: absolute;
+    top: 225px;
+    text-align: center;
+    width: 450px;
+    color: #fff;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 700px){
+    .sevises{
+        height: 250px;
+        width: 250px;
+        padding: 40px 20px;
+    }
+
+    .image{
+        height: 250px;
+        width: 250px;
+    }
+
+    .lien{
+        top: 125px;
+        width: 250px;
+        font-size: 1.1em;
+    }
+
+}
+#section3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#fomulaire{
+    
+    width: 900px;
+    height: 560px;
+    background-color: #E0796D;
+}
+#carte{
+    width: 1000px;
+}
+
+#carte > img{
+    width: 100%;
 }
