--- a/style.css
+++ b/style.css
@@ -544,25 +544,27 @@ h2{
 }
 
 .sevises{
-    height: 450px;
-    width: 450px;
+    height: 350px;
+    width: 350px;
     padding: 40px 60px;
     position: relative;
 }
 
 .image{
-    height: 450px;
-    width: 450px;
+    height: 350px;
+    width: 350px;
     object-fit: cover;
+    
 }
 
 .lien{
     position: absolute;
-    top: 225px;
+    top: 175px;
     text-align: center;
-    width: 450px;
+    width: 350px;
     color: #fff;
     text-decoration: none;
+    font-size: 1.5em;
 }
 
 @media screen and (max-width: 700px){
@@ -599,24 +601,26 @@ h2{
 /*section3*/
 /*section3*/
 /*section3*/
-
+#section3{
+    display: flex;
+    flex-wrap: wrap;
+}
 
 #fomulaire{
     float: left;
     width: 50%;
-    height: 600px;
     background-color: #E0796D;
 }
 #carte{
-    float: left;
-    height: 600px;
     width: 50%;
+    height: 950px;
+    max-height: 1200px;
+    overflow: hidden;
+  
 }
-
-#carte > img{
-    height: 600px;
+#carte-heigth{
+    height: 100%;
     width: 100%;
-    object-fit: cover;
 }
 
 #fomulaire > h2{
@@ -646,7 +650,7 @@ h2{
 
 .grand {
     position: absolute;
-    top: 5px;
+    top: 8px;
     left: 0;
     height: 25px;
     width: 25px;
@@ -680,12 +684,12 @@ input[type=checkbox] {
     transform: rotate(45deg);
 }
 
-#selecteur{
-    margin-top: 20px;
-    width: 90%;
+.selecteur{
+    margin: 40px 0;
+    width: 400px;
 }
 
-#presation-select
+.select
  {
     width: 400px;
     height: 50px;
@@ -704,10 +708,217 @@ input[type=checkbox] {
 select::-ms-expand {
     display: none;
   }
-  #select-text-blanc{
+  .select-text-blanc{
     display: none;
   }
   option{
     color: #3b2d2d4d;
   }
 
+  #tel{
+    margin-top: 20px;
+    width: 400px;
+    position: relative;
+  }
+
+  #phone{
+    width: 400px;
+    height: 50px;
+    border: 1px solid #E0796D;
+    border-bottom: #200F4A 5px solid;
+    font-size: 1em;
+    text-transform: uppercase;
+    color: #ffffffff;
+    font-weight: bold;
+    background-color:#E0796D;
+    caret-color: #200F4A;
+    caret-shape:block;
+
+  }
+
+  #ligne{
+    position: absolute;
+    top: 45px;
+    left: -5px;
+    height: 42px;
+  }
+
+ 
+  @keyframes opacity {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+  #cursor{
+    height: 42px;
+    width: 5px;
+    opacity: 0;
+    animation: opacity 1s ease-in-out infinite;
+
+  }
+
+  #rdv {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 90%;
+  }
+
+  .rendez-vous{
+    width: 200px;
+    font-size: 0.7em;
+    
+  }
+
+  .selecteur-small{
+    width: 200px;
+  }
+
+  #envoyer{
+    height: 60px;
+    width: 300px;
+    background-color: #200F4A;
+    font-size: 1em;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+    margin: 60px 0;
+    cursor: pointer;
+  }
+
+  #clear{
+    clear: both;
+    }
+
+
+
+
+
+@media screen and (max-width: 1360px){
+    #fomulaire{
+        width: 100%;
+    }
+
+    #carte{
+        width: 100%;
+        height: 600px !important;
+    }
+
+}
+
+@media screen and (max-width: 700px){
+    #carte{
+        height: 300px !important;
+    }
+    #fomulaire > h2{
+        width: 300px;
+        font-size: 1.2em;
+        letter-spacing: 0em;
+    }
+    #fomulaire > form{
+        font-size: 1.2em;
+        letter-spacing: 0em;
+    }
+
+    .grand {
+  top: 0;
+}
+.select
+ {
+    width: 280px;
+    height: 30px;
+}
+#phone{
+    width: 280px;
+    height: 30px;
+}
+
+#rdv{
+    justify-content: flex-start;
+    flex-direction: column;
+}
+#tel{
+    width: 280px;
+}
+
+.selecteur{
+    width: 280px;
+}
+
+#ligne{
+    top: 30px;
+    left: -5px;
+    height: 1.2em;   
+}
+
+#cursor{
+    height: 1.2em;
+}
+#envoyer {
+    height: 40px;
+    width: 250px;
+}
+}
+
+footer{
+    background-color: #D6CC38;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#logo2{
+    height: 500px;
+    margin-top: 30px;
+}
+#lotus-blue{
+    height: 250px;
+    width:250px;
+    overflow: hidden;
+}
+
+#adresse{
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: bold;
+    color: #823F0F;
+}
+#menu-footer > li{
+    list-style-type: none;
+}
+
+#menu-footer > li > a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    line-height: 2em;
+    font-weight: bold;
+    color: #823F0F
+}
+
+#insta{
+    margin-left: 15px;
+}
+
+@media screen and (max-width: 700px){
+footer{
+    flex-direction: column
+}
+#adresse{
+    margin-bottom: 30px;
+}
+
+#menu-footer{
+    display: none;
+}
+#réseaux{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    align-items: center;
+}
+
+}
