--- a/style.css
+++ b/style.css
@@ -240,10 +240,6 @@ header > nav > ul > li:hover >a{
     header > nav > ul > li > a{
         font-size: 1.2em;
     }
-
-    header > nav{
-        margin-bottom: -15px;
-    }
 }
 @media (max-width: 1260px){
     header > nav > ul > li > a{
@@ -433,11 +429,11 @@ align-items: center;
 }
 
 .presentation{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 50px;
     width: 450px;
-    height: 800px;
+    height: 850px;
     position: relative;
+
 }
 
 .circle{
@@ -447,7 +443,14 @@ align-items: center;
     object-fit: cover;
     border-radius: 50%;
     align-items: center;
+    transition: all 0.5s;
 }
+
+.presentation:hover .circle{
+    transform: scale(1.1);
+
+}
+
 
 .description{
     text-align: center;
@@ -457,6 +460,27 @@ align-items: center;
 
 .titre{
     font-size: 2em;
+    color: #6F372A;
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.titre::after{
+        
+    content: '';
+    position: absolute;
+    width: 30%;
+    display: block;
+    height: 5px;
+    background-color: #6F372A;
+    bottom: -5px; 
+    transition: all 0.5s;
+}
+
+.presentation:hover .titre::after{
+    width: 60%;
 }
 
 .text{
@@ -478,7 +502,13 @@ align-items: center;
     font-weight: bold;
     font-size: 1.8em;
     border: none;
+    transition: all 0.5s;
 }
+.decouvrir:hover{
+    opacity: 0.9;
+    scale: 1.1;
+}
+
 .ronde{
     display: flex;
 }
@@ -504,7 +534,10 @@ align-items: center;
 
     .titre{
         font-size: 1.5em;
+        text-decoration: none;
     }
+
+
     
     .text{
         margin-top: 30px;
@@ -543,12 +576,39 @@ h2{
     text-decoration:underline ;
 }
 
+
 .sevises{
     height: 350px;
     width: 350px;
-    padding: 40px 60px;
+    margin: 40px 60px;
     position: relative;
+    transition: all 1s;
+    box-sizing: border-box;
+    
+    --outline: 2px solid white;
+    overflow: hidden;
 }
+
+.sevises:hover{
+    margin-top: 35px;
+    background-color: #000000;
+    overflow: hidden;
+    outline: var(--outline);
+    outline-offset: -20px;
+   
+}
+
+.sevises > img{
+    transition: all 0.5s;
+}
+
+.sevises:hover >img{
+    opacity: 0.5;
+    height: 105%;
+    width: 105%;
+
+}
+
 
 .image{
     height: 350px;
@@ -559,12 +619,17 @@ h2{
 
 .lien{
     position: absolute;
-    top: 175px;
+    top: 130px;
     text-align: center;
     width: 350px;
     color: #fff;
     text-decoration: none;
     font-size: 1.5em;
+    transition: all 0.5s;
+}
+
+.sevises:hover .lien{
+    top: 150px;
 }
 
 @media screen and (max-width: 700px){
@@ -786,6 +851,12 @@ select::-ms-expand {
     color: #fff;
     margin: 60px 0;
     cursor: pointer;
+    transition: all 0.5s;
+  }
+
+  #envoyer:hover{
+    opacity: 0.8;
+    transform: scale(1.1);
   }
 
   #clear{
@@ -862,6 +933,26 @@ select::-ms-expand {
 }
 }
 
+
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+/*footer*/
+
+
+
+
+
 footer{
     background-color: #D6CC38;
     display: flex;
@@ -909,6 +1000,7 @@ footer{
 }
 #adresse{
     margin-bottom: 30px;
+    font-size: 1.5em;
 }
 
 #menu-footer{
