--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Bankai';
+	src: url(./Bankai\ Demo\ Version.otf)
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -16,6 +21,7 @@ header {
 }
 #desktop {
     height: 100vh;
+   
 }
 
 
@@ -23,6 +29,7 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 header > nav{
     position: absolute;
@@ -33,6 +40,16 @@ header > nav{
     display: flex;
     justify-content: space-around;
     
+}
+
+h1{
+    font-family: 'Bankai', serif;
+    font-size: 7em;
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    color: white;
+    bottom: 80px;
 }
 #logo{
     position: absolute;
@@ -286,6 +303,10 @@ header > nav > ul > li:hover >a{
 #mobil{
         height: 40px;
     }
+
+h1{
+    font-size: 4em;
+}
 
 #menu{
     position: absolute;
@@ -636,7 +657,7 @@ h2{
     .sevises{
         height: 250px;
         width: 250px;
-        padding: 40px 20px;
+        
     }
 
     .image{
